<resources>
    <string name="app_name">Acevedo_EvalFinal</string>
    <string name="title_Inicio">Inicio</string>
    <string name="title_categoria">Categoría</string>
    <string name="title_cuenta">Cuenta</string>

    <string name="Media">Media</string>
    <string name="App">app</string>
    <string name="Iniciar">Iniciar </string>
    <string name="Sesion"> Sesión</string>
    <string name="Correo">Correo electrónico</string>
    <string name="Password">Contraseña</string>
    <string name="RepPassword">Repetir contraseña</string>
    <string name="Entrar">Entrar</string>
    <string name="CrearCuenta">Crear cuenta</string>
    <string name="SegundaOpcion">o puedes crear una cuenta totalmente gratuita</string>
    <string name="helperEmail">Ej. pedro@gmail.com</string>
    <string name="Crear">Crear </string>
    <string name="Cuenta"> Cuenta</string>
    <string name="Siguiente">Siguiente</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Volver">Volver</string>
    <string name="Regresar">Regresar</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Rev">Revisa y completa tu información</string>
    <string name="MoreInfo">Cuéntanos sobre ti</string>
    <string name="HelperNombres">Este campo solo debe contener tu(s) nombre(s). Ej. Pedro Morales</string>
    <string name="Nombres">Nombres</string>
    <string name="ApPaterno">Apellido Paterno</string>
    <string name="ApMaterno">Apellido Materno</string>
    <string name="NumCelular">Número de celular</string>
    <string name="FNacimiento">Fecha de nacimiento - Opcional</string>
    <string name="Genero">Selecciona tu género - Opcional</string>
    <string name="DatosFinales">Ya casi terminamos de crear tu cuenta</string>
    <string name="Documento">Documento</string>
    <string name="NumDocumento">Número de documento</string>
    <string name="HeLeido">He leído y acepto</string>
    <string name="Terminos"> Términos y condiciones</string>
    <string name="ylas"> y las </string>
    <string name="Politicas"> Politicas de privacidad </string>
    <string name="UsoDeDatos"> uso de mis datos y registro </string>
    <string name="Bienvenida">¡Te damos la bienvenida a Mediapp! </string>
    <string name="BienvenidaRepartidor">¡Te damos la bienvenida a Mediapp Repartidores! </string>
    <string name="msj1">Hemos creado correctamente tu cuenta en Mediapp </string>
    <string name="msj2">Se han actualizado correctamente tus datos en Mediapp </string>
    <string name="msj1Rep">Hemos creado correctamente tu cuenta en Mediapp Repartidores </string>
    <string name="msj2Rep">Se han actualizado correctamente tus datos en Mediapp Repartidores</string>
    <string name="Empezar">Empezar a comprar </string>
    <string name="EmpezarRepartidor">Empezar a repartir </string>
    <string name="loginmsj">Bienvenido a la aplicación de repartidores de Mediapp </string>
    <string name="loginmsjp">Bienvenido a Mediapp </string>
    <string name="txtSearch">¿Qué estás buscando?</string>
    <string name="CAT">CAT. </string>
    <string name="Defecto">Texto por defecto. </string>
    <string name="MayorInformacion"> + Mayor información </string>
    <string name="Vendida">Vendida y despachada por </string>
    <string name="DetProductoTit">Detalles del Producto</string>
    <string name="Comprar">Comprar</string>
    <string name="Continuar">Continuar</string>
    <string name="LugarDeEntrega">Lugar de entrega</string>
    <string name="Cambiar">Cambiar</string>
    <string name="RecepYo">Recibiré yo</string>
    <string name="RecepOtraPersona">Recibirá otra persona</string>
    <string name="ApNom">Apellidos y Nombres</string>
    <string name="EjmApNom">Ej. Suarez Ventura Martin</string>
    <string name="EjCelular">Ej. 978 123 845</string>
    <string name="ResumenPedido">Resumen de pedido</string>
    <string name="TotalPagar">Total a pagar</string>
    <string name="Felicidades">¡Felicidades!</string>
    <string name="RegExitoso">Tú registro ha sido exitoso</string>
    <string name="verMas">Ver más</string>
    <string name="MiPerfil">Mi perfil</string>
    <string name="MisPedidos">Mis pedidos</string>
    <string name="HistorialPedidos">Mi historial de pedidos</string>
    <string name="AjustesSoporte">Ajustes y soporte</string>
    <string name="AtCliente">Atención al cliente</string>
    <string name="Idioma">Cambiar idioma</string>
    <string name="FuenteSize">Tamaño de fuente</string>
    <string name="Legales">Legales</string>
    <string name="Salir">Cerrar sesión</string>
    <string name="EditPerfil">Editar perfil</string>
    <string name="ActualizarDatos">Actualiza tus datos personales</string>
    <string name="Guardar">Guardar</string>
    <string name="Hola">¡Hola</string>
    <string name="MisPedidosEntregados">Mis Pedidos Entregados</string>
    <string name="title_activity_ver_ruta_pedido">Map</string>
    <string name="Comenzar">Comenzar</string>
    <string name="RegistrarEntrega">Registrar Entrega</string>
    <string name="RegExitosoRepartidor">Pedido Entregado</string>


</resources>