<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MediappRepartidores.RegistrarEntrega">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/imgPersonaRecepcionista"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="20dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:foregroundTint="#FFFFFF"
                    android:scaleType="centerCrop"
                    android:src="@drawable/recep" />


            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/imgPersonaRecepcionista"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:elevation="10dp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilCorreo"
                        style="@style/Widget.Design.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:helperText="@string/ApNom">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtCorreoLogRepartidor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_light"
                            android:hint="@string/ApNom"
                            android:inputType="textPersonName" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilCelular"
                        style="@style/Widget.Design.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:helperText="@string/EjCelular">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtCelular"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_light"
                            android:hint="@string/NumCelular"
                            android:inputType="number" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="360dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="200dp"
            android:gravity="left"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                app:cardCornerRadius="100dp"
                app:cardBackgroundColor="@color/secondary"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imgTomarFoto"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="2dp"
                    android:tint="@color/white"
                    android:src="@drawable/ic_camera" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>



    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGuardarPedido"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn_secondary"
            android:text="@string/Guardar"/>
    </LinearLayout>

</LinearLayout>

</RelativeLayout>